fix: Slight label misalignment in QTab when hide prop is set to "icon" (on narrow windows only) #881

--- a/src/components/tab/tabs.ios.styl
+++ b/src/components/tab/tabs.ios.styl
@@ -61,6 +61,8 @@
     &.hide-icon .q-tab-icon,
     &.hide-label .q-tab-label
       display none !important
+    &.hide-icon .q-tab-label
+        margin-top 0
 
 @media (max-width $breakpoint-md-max)
   .q-tabs-head:not(.scrollable)
